change meta twitter:image to point to header image absolute path

--- a/themes/hugo-academic/layouts/partials/header.html
+++ b/themes/hugo-academic/layouts/partials/header.html
@@ -82,11 +82,12 @@
   {{ if .IsPage }}
 <meta name="twitter:description" content="{{ .Summary }}" />
 <meta name="twitter:title" content="{{ .Title }}" />
-<meta name="twitter:image" content="{{ .Params.image }}" /> 
+<meta name="twitter:image" content="https://adamgruer.rbind.io/img/{{ .Params.header.image }}" /> 
 {{ else }}
 <meta name="twitter:title" content="{{ .Site.Title }}" />
 <meta name="twitter:description" content="{{ .Description }}" />
 {{ end }}
+
   <meta property="og:site_name" content="{{ .Site.Title }}">
   <meta property="og:url" content="{{ .Permalink }}">
   <meta property="og:title" content="{{ if not .IsHome }}{{ .Title }} | {{ end }}{{ .Site.Title }}">
